--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 		</div>
 		<div class="row col-100" id="address">
 			<div class="col-50">
-				<iframe src="https://www.google.com/maps/@25.3726678,68.3349256,10779m/data=!3m1!1e3"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2933.6381369776655!2d68.33340411949895!3d25.37619101059252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x394c70826e8a3473%3A0xdb5b5329421bef8d!2sDubai%20Islamic%20Bank!5e1!3m2!1sen!2s!4v1636373664626!5m2!1sen!2s"></iframe>
 			</div>
 			<div class="col-50">
 				<div id="details" class="row" >
